<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="settings_title">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="share_message">Ознакомьтесь с этим курсом по разработке Android на Practicum!</string>
    <string name="support_email">Почта поддержки</string>
    <string name="extra_email">support@example.com</string>
    <string name="support_subject">Сообщение разработчикам Playlist Maker</string>
    <string name="terms_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_hint">Поиск</string>
    <string name="no_results_text">Ничего не нашлось</string>
    <string name="retry">Обновить</string>
    <string name="connection_error_text">Проблемы со связью. Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="clear_history">Очистить историю</string>
    <string name="search_history">Вы искали</string>
    <string name="unknown_track">Неизвестный трек</string>
    <string name="unknown_artist">Неизвестный исполнитель</string>
    <string name="default_duration">00:00</string>
    <string name="unknown_album">Неизвестный альбом</string>
    <string name="default_year">-</string>
    <string name="default_genre">-</string>
    <string name="default_country">-</string>
    <string name="media_library_title">Медиатека</string>
    <string name="new_playlist_button">Новый плейлист</string>
    <string name="empty_playlist_text">Вы не создали\nни одного плейлиста</string>
    <string name="empty_favorites_text">Ваша медиатека пуста</string>
    <string name="favorites_tab_title">Избранные треки</string>
    <string name="playlists_tab_title">Плейлисты</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="share_item">Поделиться</string>
    <string name="edit_item">Редактировать</string>
    <string name="delete_item">Удалить</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="save_playlist">Сохранить</string>
    <string name="playlist_info">%1$s мин • %2$d треков</string>
    <string name="no_tracks_message">В этом плейлисте нет треков</string>
</resources>
