<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/library_fragment">

    <fragment
        android:id="@+id/library_fragment"
        android:name="com.example.playlistmaker.presentation.ui.library.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_library">
        <action
            android:id="@+id/action_library_fragment_to_createPlaylistFragment"
            app:destination="@id/createPlaylistFragment" />
        <action
            android:id="@+id/action_library_fragment_to_playlistInsideFragment"
            app:destination="@id/playlistInsideFragment" />
    </fragment>

    <fragment
        android:id="@+id/search_fragment"
        android:name="com.example.playlistmaker.presentation.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_search_fragment_to_playerActivity"
            app:destination="@id/playerActivity" />
    </fragment>

    <fragment
        android:id="@+id/settings_fragment"
        android:name="com.example.playlistmaker.presentation.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings"/>

    <activity
        android:id="@+id/playerActivity"
        android:name="com.example.playlistmaker.presentation.ui.player.PlayerActivity"
        android:label="audio_player"
        tools:layout="@layout/audio_player" />

    <fragment
        android:id="@+id/createPlaylistFragment"
        android:name="com.example.playlistmaker.presentation.CreatePlaylistFragment"
        android:label="@string/new_playlist"
        tools:layout="@layout/fragment_create_playlist">
        <argument
            android:name="playlistToEdit"
            app:argType="com.example.playlistmaker.domain.models.Playlist"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/editPlaylistFragment"
        android:name="com.example.playlistmaker.presentation.ui.library.EditPlaylistFragment"
        android:label="@string/edit_playlist"
        tools:layout="@layout/fragment_create_playlist">
        <argument
            android:name="playlist"
            app:argType="com.example.playlistmaker.domain.models.Playlist"
            android:defaultValue="@null" />
    </fragment>

    <fragment
        android:id="@+id/playlistInsideFragment"
        android:name="com.example.playlistmaker.presentation.ui.library.PlaylistInsideFragment"
        android:label="Playlist Detail"
        tools:layout="@layout/fragment_playlist_inside">
        <argument
            android:name="playlistId"
            app:argType="long" />
        <action
            android:id="@+id/action_playlistInsideFragment_to_editPlaylistFragment"
            app:destination="@id/editPlaylistFragment" />
    </fragment>

</navigation>
