<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/primaryColor">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:gravity="left"
        android:layout_marginBottom="16dp"/>


    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/lupa"
        android:text="@string/search"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:icon="@drawable/lupa"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/button_library"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/music_xml"
        android:text="@string/library"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:icon="@drawable/music_xml"
        app:cornerRadius="8dp"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/settings"
        android:textSize="18sp"
        android:drawableStart="@drawable/light_mode"
        app:icon="@drawable/light_mode"
        app:iconGravity="textStart"
        app:iconPadding="8dp"
        app:iconTint="@color/black"
        app:cornerRadius="8dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_marginTop="16dp" />

</LinearLayout>
