<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createPlaylistFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.playlistmaker.presentation.CreatePlaylistFragment">
    
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorSurface"
        android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
        android:title="@string/new_playlist"
        app:titleTextColor="@color/buttonText2"
        android:fontFamily="@font/ys_display_medium"
        app:navigationIcon="@drawable/arrow"
        app:navigationIconTint="@color/buttonText2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:title="Новый плейлист" />

    <FrameLayout
        android:id="@+id/coverContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="82dp"
        android:background="@drawable/bg_dashed_border"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1">

        <ImageView
            android:id="@+id/coverImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:visibility="gone" />
        <ImageView
            android:id="@+id/plusIcon"
            android:layout_width="79dp"
            android:layout_height="79dp"
            android:layout_gravity="center"
            android:src="@drawable/playlist_picture" />
    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/coverContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeWidth="1dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxStrokeColor="@color/YP_blue"
        app:hintTextColor="@color/YP_blue"
        app:boxStrokeWidthFocused="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/playlist_name"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/text_color"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descriptionInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/nameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:boxStrokeWidth="1dp"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxStrokeColor="@color/YP_blue"
        app:hintTextColor="@color/YP_blue"
        app:boxStrokeWidthFocused="2dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/playlist_description"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:textColor="@color/text_color"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createButton"
        style="@style/MyPlainButtonStyle"
        app:layout_constraintTop_toBottomOf="@+id/descriptionInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:enabled="false"
        android:text="@string/create_playlist"/>


</androidx.constraintlayout.widget.ConstraintLayout>
