<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.search.SearchFragment"
    android:background="@color/backgroundPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:title="@string/search_hint"
            android:titleTextAppearance="@style/ToolbarTitleText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIconTint="@color/arrow"
            app:titleTextColor="@color/buttonText2" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="0dp"
            android:layout_height="@dimen/search_height"
            android:layout_marginStart="@dimen/margin_start_medium"
            android:layout_marginTop="@dimen/search_start"
            android:layout_marginEnd="@dimen/margin_start_medium"
            android:background="@drawable/search_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <EditText
                android:id="@+id/search_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/search_start"
                android:background="@drawable/search_background"
                android:drawableStart="@drawable/lupa_mini"
                android:drawablePadding="@dimen/search_start"
                android:hint="@string/search_hint"
                android:padding="0dp"
                android:singleLine="true"
                android:textColorHint="@color/search"
                android:textColor="@color/text_light"
                android:textCursorDrawable="@drawable/cursor_color"
                android:importantForAccessibility="yes" />

            <ImageView
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:padding="8dp"
                android:src="@drawable/clear"
                android:textColor="@color/text_light"
                android:visibility="gone" />
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_margin_top"
            android:layout_marginBottom="@dimen/button_margin_top"
            android:src="@drawable/placeholder_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchHistoryTitle"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/item_track" />

        <ImageView
            android:id="@+id/error_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:src="@drawable/error2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/error_text"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/error_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_text_medium"
            android:textColor="@color/buttonText2"
            android:lineSpacingExtra="8dp"
            android:paddingTop="16dp"
            android:text="@string/connection_error_text"
            android:textAlignment="center"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="360dp"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/error_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/RoundedButton"
            android:backgroundTint="@color/button_color"
            android:fontFamily="@font/ys_display_medium"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/error_icon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="210dp"
            android:src="@drawable/error"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/error_text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/ys_text_medium"
            android:text="@string/no_results_text"
            android:textAlignment="center"
            android:textColor="@color/buttonText2"
            android:textSize="@dimen/text_size_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_icon2"
            tools:ignore="MissingConstraints"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/searchHistoryTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_history"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="@color/text_color"
            android:textSize="@dimen/text_size_medium"
            android:layout_marginTop="50dp"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="0dp"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/clearHistoryButton"
            style="@style/clearHistoryButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear_history"
            app:layout_constraintTop_toBottomOf="@id/recycler_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginTop="140dp"
            android:indeterminate="true"
            android:visibility="gone"
            android:indeterminateDrawable="@drawable/circular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frameLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
